feat: Add chat privacy info dialog and update menu UI
This commit introduces a new "Info" option in the "Past Conversations" screen menu, which displays a dialog explaining the app's chat privacy policy. The menu's UI has also been updated for better visual clarity.

Key changes:
-   **`PastConversationsFragment.kt`**:
    -   Added logic to handle clicks on the new "Info" menu item.
    -   A `showInfoDialog()` function now displays a custom dialog with a message detailing that chat data is stored locally and is not uploaded to any server.

-   **`menu_past_conversations.xml`**:
    -   A new menu item with the id `info` has been added.

-   **`strings.xml`**:
    -   Added the string "ⓘ Info" for the new menu item.
    -   Updated "Clear chat" to "🗑️ Clear chat" for better visual indication.

-   **`styles.xml` & `custom_popup_background.xml`**:
    -   The `CustomPopupMenu` style has been updated to use `Widget.Material3.PopupMenu` and now references a new drawable `custom_popup_background.xml`. This change applies an 8dp corner radius to the popup menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,5 +193,6 @@
     <string name="_3">3</string>
     <string name="_2">2</string>
     <string name="more_options">more options</string>
-    <string name="clear_chat">Clear chat</string>
+    <string name="clear_chat">🗑️ Clear chat</string>
+    <string name="info">ⓘ Info</string>
 </resources>
