--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,4 +195,5 @@
     <string name="more_options">more options</string>
     <string name="clear_chat">🗑️ Clear chat</string>
     <string name="info">ⓘ Info</string>
+    <string name="scroll_to_the_bottom">scroll to the bottom</string>
 </resources>
