feat: Add prompt suggestions to empty Ask AI screen
This commit enhances the user experience on the "Ask AI" screen by displaying a set of prompt suggestions when the chat is empty. This guides users on how to interact with the feature. Once the user sends a message, the prompts are hidden, and the chat view is shown.

Key changes:
- **`fragment_ask_ai.xml`**:
    - A new `LinearLayout` (`@+id/emptyResponse`) has been added to hold a "What can I help with?" title and three `AppCompatButton` prompt suggestions.
    - This layout is visible by default, and the `chatRecyclerView` is now initially set to `android:visibility="gone"`.

- **`AskAiFragment.kt`**:
    - A new `setupPrompts()` function adds `onClickListener`s to the prompt buttons. Clicking a button populates the message input field with the corresponding prompt text.
    - When the "Send" button is clicked, the `emptyResponse` view is now removed, and the `chatRecyclerView` is shown.

- **`res/drawable` & `res/values`**:
    - Added a new `button_glass_background.xml` drawable to create a semi-transparent, "glassmorphism" effect for the buttons.
    - A corresponding `GlassButtonStyle` has been defined in `styles.xml`.
    - New color definitions for the glass button style (normal, pressed, stroke) have been added to `colors.xml` for both light and night themes.
    - New string resources for the prompt suggestions and the title have been added to `strings.xml`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,4 +196,8 @@
     <string name="clear_chat">🗑️ Clear chat</string>
     <string name="info">ⓘ Info</string>
     <string name="scroll_to_the_bottom">scroll to the bottom</string>
+    <string name="what_can_i_help_with">What can I help with?</string>
+    <string name="prompt1">Analyze my push-up stats this week</string>
+    <string name="prompt2">Suggest a 7-day push-up challenge for me.</string>
+    <string name="prompt3">Help me create a workout plan.</string>
 </resources>
