--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,4 +200,15 @@
     <string name="prompt1">Analyze my push-up stats this week</string>
     <string name="prompt2">Suggest a 7-day push-up challenge for me.</string>
     <string name="prompt3">Help me create a workout plan.</string>
+    <string name="date_example">ddth MMM. yyyy</string>
+    <string name="push_ups_count">push-ups\ncount</string>
+    <string name="active_time">Active Time</string>
+    <string name="sets">Sets</string>
+    <string name="pace_reps_min">Pace (reps/min)</string>
+    <string name="you_have_reached_0_of_your_goal">You have reached 0% of your goal</string>
+    <string name="goal_0">Goal: 0</string>
+    <string name="session_time">Session Time</string>
+    <string name="active_rest_time_ratio">Active-Rest Time Ratio</string>
+    <string name="estimated_calories_burned">Estimated Calories Burned</string>
+    <string name="_00_00_kcal">~00.00 kcal</string>
 </resources>
