Feat: Add configurable daily goal and progress tracking
This commit introduces a user-configurable daily push-up goal and displays the user's progress towards that goal on the summary screen.

Key changes:
- **`Preferences.kt`**:
    - A new preference key, `GOAL`, has been added to store the user's daily goal.
    - Added `getGoal()` and `setGoal()` methods to manage the goal value, with a default of 50.

- **`DaySummaryFragment.kt`**:
    - The fragment now fetches the user's goal from `Preferences`.
    - It calculates the percentage of the goal achieved and updates the progress bar and a descriptive text view accordingly.
    - The progress bar is capped at 100% for display purposes.

- **`strings.xml`**:
    - Replaced static goal-related strings with new formatted string resources (`goal` and `you_have_reached_of_your_goal`) to dynamically display the goal and progress percentage.

- **Layout and Code Cleanup**:
    - **`fragment_day_summary.xml`**: Updated to use the new formatted string resources and adjusted a text color for better visibility.
    - **`AnalyticsFragment.kt`**: Removed an unused import (`ShareStatsActivity`).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,10 +205,10 @@
     <string name="active_time">Active Time</string>
     <string name="sets">Sets</string>
     <string name="pace_reps_min">Pace (reps/min)</string>
-    <string name="you_have_reached_0_of_your_goal">You have reached 0% of your goal</string>
-    <string name="goal_0">Goal: 0</string>
     <string name="session_time">Session Time</string>
     <string name="active_rest_time_ratio">Active-Rest Time Ratio</string>
     <string name="estimated_calories_burned">Estimated Calories Burned</string>
     <string name="_00_00_kcal">~00.00 kcal</string>
+    <string name="goal">Goal: %1$d</string>
+    <string name="you_have_reached_of_your_goal">You have reached %1$d%% of your goal</string>
 </resources>
