--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,4 +211,5 @@
     <string name="_00_00_kcal">~00.00 kcal</string>
     <string name="goal">Goal: %1$d</string>
     <string name="you_have_reached_of_your_goal">You have reached %1$d%% of your goal</string>
+    <string name="estimated_calories_burned_value">~%1$s kcal</string>
 </resources>
