Feat: Add weight setup screen for calorie calculation
This commit introduces a new weight setup screen to capture the user's weight. This information is used to provide a more accurate estimation of calories burned during workouts.

The new screen is displayed after login or sign-up. If the user's weight is already recorded, the screen is skipped.

Key changes:
- **`navigation.xml`**:
    - Added a new `weightSetupFragment`.
    - Updated navigation flow to direct users from `splashFragment` and `onBoardingFragment` to `weightSetupFragment` instead of `cameraAccessFragment`.

- **`WeightSetupFragment` & `WeightSetupViewModel`**:
    - Created a new screen with its corresponding ViewModel and layout (`fragment_weight_setup.xml`) to handle weight input.
    - The fragment allows users to enter their weight in kilograms or pounds and handles the conversion to kilograms for storage.
    - It checks if weight data already exists to skip the setup process if unnecessary.

- **`WeightSetupRepository`**:
    - Added a new repository to save the user's weight to both local `Preferences` and Firestore.
    - Includes logic to check if the weight has been previously saved in the user's Firestore profile.

- **`Constants.kt`**:
    - Added a new constant `USER_WEIGHT` for Firestore field mapping.

- **`strings.xml`**:
    - Added new strings for the weight setup UI, such as titles, subtitles, and input hints.

- **Navigation Flow Adjustments**:
    - In `SplashFragment` and `OnBoardingFragment`, updated navigation logic to transition to `weightSetupFragment` after a successful login or sign-up.

- **Data Models & Preferences**:
    - The default weight in `Preferences.kt` is set to `0f` to signify that it hasn't been set.
    - Added `userWeight` to the `SignInResult` data class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,4 +212,10 @@
     <string name="goal">Goal: %1$d</string>
     <string name="you_have_reached_of_your_goal">You have reached %1$d%% of your goal</string>
     <string name="estimated_calories_burned_value">~%1$s kcal</string>
+    <string name="weight_setup_title">personalize your experience</string>
+    <string name="weight_setup_subtitle">Your weight helps us calculate more accurate calorie loss during pushup workouts.</string>
+    <string name="enter_your_weight">Enter your weight</string>
+    <string name="kilograms">kilograms</string>
+    <string name="pounds">pounds</string>
+    <string name="invalid_weight">Invalid Weight</string>
 </resources>
