Refactor: Implement MVVM for Account screen and add weight update feature
This commit refactors the `AccountFragment` to use the MVVM architecture and introduces a new feature allowing users to view and update their weight.

The fragment now fetches user data from Firestore via a `ViewModel` and `Repository`, replacing the previous direct dependency on `GoogleAuthUiClient`.

### Key Changes:

-   **`AccountFragment.kt`**:
    -   Re-implemented to use `AccountViewModel` for data fetching and updates.
    -   Fetches user data (name, email, profile picture, weight) from Firestore.
    -   Adds UI and logic for users to edit and save their weight. The input field is enabled/disabled via an edit button, which also triggers the update.

-   **`fragment_account.xml`**:
    -   Added an `EditText` for displaying and editing user weight.
    -   Included an `ImageView` (`editWeightButton`) to toggle the editing state of the weight field.

-   **`AccountViewModel.kt` & `AccountViewModelFactory.kt`**:
    -   New `ViewModel` to manage the `AccountFragment`'s UI state and business logic.
    -   Exposes `UserDataState` (Loading, Success, Error) to the UI.
    -   Provides methods to `fetchUserData` and `updateWeight`.

-   **`AccountRepository.kt`**:
    -   New repository class to handle data operations related to the user's account.
    -   Contains logic to fetch user profile data from Firestore and update the user's weight in both Firestore and local `Preferences`.

-   **New Assets & Resources**:
    -   Added `edit_pencil.xml` drawable for the weight edit button.
    -   Added a new `weight` string resource in `strings.xml`.

-   **Navigation**:
    -   Updated `navigation.xml` to point to the new package structure for `AccountFragment`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,4 +218,5 @@
     <string name="kilograms">kilograms</string>
     <string name="pounds">pounds</string>
     <string name="invalid_weight">Invalid Weight</string>
+    <string name="weight">Weight</string>
 </resources>
