feat: Add daily push-up goal setting feature
This commit introduces a new feature allowing users to set a daily push-up goal. The goal is displayed on the dashboard and can be updated through a new dialog.

Key changes:
- **`DashboardFragment.kt`**:
    - A new card is displayed on the dashboard to show the current daily goal.
    - Tapping the goal card opens a dialog to set a new goal.
    - The `Preferences` class is now used to persist the goal value.
    - A custom dialog (`showGoalDialog`) with an animated slider is implemented for a smoother user experience when setting the goal.

- **`fragment_dashboard.xml`**:
    - A `CardView` (`goalCard`) has been added to display the daily goal.

- **`dialog_set_goal.xml`**:
    - A new layout file for the goal-setting dialog, which includes a `Slider` for goal selection and Save/Cancel buttons.

- **`strings.xml`**:
    - New string resources (`set_goal`, `save_goal`, `how_many_pushups_do_you_want_to_aim_for_each_day`) have been added to support the new feature.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,4 +219,7 @@
     <string name="pounds">pounds</string>
     <string name="invalid_weight">Invalid Weight</string>
     <string name="weight">Weight</string>
+    <string name="set_goal">Set Daily Goal</string>
+    <string name="save_goal">Save Goal</string>
+    <string name="how_many_pushups_do_you_want_to_aim_for_each_day">How many pushups do you want to aim for each day?</string>
 </resources>
