Feat: Add refresh button to offline banner
This commit introduces a refresh button to the offline banner, allowing users to manually trigger a connectivity check. When the banner is clicked, it re-evaluates the internet status and hides the banner if the connection is restored.

The visibility of the bottom navigation view is now managed with a gradient overlay for a smoother visual transition, and the offline banner's background color has been updated.

Key changes:
- **`activity_home.xml`**:
    - The offline banner (`offlineBanner`) now includes a refresh icon using `app:drawableEndCompat`.
    - The background color of the banner card has been changed to `@color/very_light_grey`.

- **`HomeActivity.kt`**:
    - An `onClickListener` has been added to the `offlineBanner`. It re-checks for an internet connection and updates the banner's visibility accordingly.
    - Window insets are now applied to the `bottomNav` to prevent it from overlapping with system UI elements.

- **`drawable/gradient.xml`**:
    - A `centerColor` (`@color/semi_transparent_white`) has been added to the gradient, improving the fade effect over the bottom navigation.

- **Assets and Resources**:
    - **`drawable/refresh.xml`**: New vector asset for the refresh icon.
    - **`values/strings.xml`**: Added the "Refresh" string.
    - **`values/colors.xml` & `values-night/colors.xml`**: New `semi_transparent_white` color definitions for the gradient.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,4 +223,5 @@
     <string name="save_goal">Save Goal</string>
     <string name="how_many_pushups_do_you_want_to_aim_for_each_day">How many pushups do you want to aim for each day?</string>
     <string name="offline_status">Offline • Couldn’t refresh feed</string>
+    <string name="refresh">Refresh</string>
 </resources>
