Chore: Abbreviate weight units and adjust UI layouts
This commit shortens the string resources for weight units and makes minor adjustments to UI layouts for better alignment and text wrapping.

Key changes:
- **`app/src/main/res/values/strings.xml`**:
  - The "kilograms" string has been abbreviated to "kgs".
  - The "pounds" string has been abbreviated to "lbs".

- **`app/src/main/res/layout/fragment_weight_setup.xml`**:
  - Added constraints to ensure the unit selection card aligns correctly with the weight input card.

- **`app/src/main/res/layout/fragment_settings.xml`**:
  - Modified the description `TextView` to allow text to wrap properly and prevent it from overlapping with other UI elements.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,8 +215,8 @@
     <string name="weight_setup_title">personalize your experience</string>
     <string name="weight_setup_subtitle">Your weight helps us calculate more accurate calorie loss during pushup workouts.</string>
     <string name="enter_your_weight">Enter your weight</string>
-    <string name="kilograms">kilograms</string>
-    <string name="pounds">pounds</string>
+    <string name="kilograms">kgs</string>
+    <string name="pounds">lbs</string>
     <string name="invalid_weight">Invalid Weight</string>
     <string name="weight">Weight</string>
     <string name="set_goal">Set Daily Goal</string>
